KSNR-6 # hadoop-catalog / add s3 support (#17)